node inspector alignment issues

--- a/css/noflo-ui.css
+++ b/css/noflo-ui.css
@@ -22,6 +22,13 @@ input:focus, textarea:focus, button:focus, h1, h2, h3, div, a, p, div {
   outline:none;
 }
 
+/* fucking bullshit... can't change input selection colors in Chrome?
+*::selection {
+  background-color: black;
+  background: black;
+  color:red;
+}
+*/
 
 h1, h2, h3 {
   font-weight: normal;
@@ -296,7 +303,7 @@ the-card ul li {
   margin: 0px;
 }
 the-card ul.toolbar2right {
-  width: 170px;
+  width: 180px;
   display:block;
   position: absolute;
   right: 10px;
